# aoc2018

./: Main.hs  Tests.hs  urdh-aoc2018.cabal
Day1/: Solutions.hs  Tests.hs
Day10/: Parsing.hs  Solutions.hs  Tests.hs
Day11/: Solutions.hs  Tests.hs
Day12/: Parsing.hs  Solutions.hs  Tests.hs
Day13/: Parsing.hs  Solutions.hs  Tests.hs
Day14/: Solutions.hs  Tests.hs
Day16/: Parsing.hs  Solutions.hs  Tests.hs
Day17/: Parsing.hs  Solutions.hs  Tests.hs
Day18/: Parsing.hs  Solutions.hs  Tests.hs
Day19/: Parsing.hs  Solutions.hs  Tests.hs
Day2/: Solutions.hs  Tests.hs
Day20/: Parsing.hs  Solutions.hs  Tests.hs
Day21/: Solutions.hs
Day3/: Parsing.hs  Solutions.hs  Tests.hs
Day4/: Parsing.hs  Solutions.hs  Tests.hs
Day5/: Solutions.hs  Tests.hs
Day6/: Parsing.hs  Solutions.hs  Tests.hs
Day7/: Parsing.hs  Solutions.hs  Tests.hs
Day8/: Parsing.hs  Solutions.hs  Tests.hs
Day9/: Solutions.hs  Tests.hs
Utilities/: Parsing.hs  Tests.hs  Tuples.hs
