name:                urdh-aoc2018
version:             0.1.0.0
license:             PublicDomain
author:              Simon Sigurdhsson
maintainer:          Sigurdhsson@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable urdh-aoc2018
  main-is:             Main.hs
  build-depends:       base >=4.11 && <4.12
  default-language:    Haskell2010

test-suite urdh-aoc2018-tests
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  build-Depends:    base >= 3 && < 5
                  , tasty
                  , tasty-hunit
