name:                urdh-aoc2018
version:             0.1.0.0
license:             PublicDomain
author:              Simon Sigurdhsson
maintainer:          Sigurdhsson@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable urdh-aoc2018
  main-is:             Main.hs
  other-modules:       Day1.Solutions
                     , Day2.Solutions
                     , Day3.Solutions, Day3.Parsing
                     , Day4.Solutions, Day4.Parsing
                     , Day5.Solutions
                     , Day6.Solutions, Day6.Parsing
                     , Day7.Solutions, Day7.Parsing
                     , Day8.Solutions, Day8.Parsing
                     , Day9.Solutions
  build-depends:       base >=4.11 && <4.12
                     , file-embed
                     , containers
                     , time
                     , rset
                     , pointedlist
  default-language:    Haskell2010

test-suite urdh-aoc2018-tests
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  other-modules:    Day1.Solutions, Day1.Tests
                  , Day2.Solutions, Day2.Tests
                  , Day3.Solutions, Day3.Tests, Day3.Parsing
                  , Day4.Solutions, Day4.Tests, Day4.Parsing
                  , Day5.Solutions, Day5.Tests
                  , Day6.Solutions, Day6.Tests, Day6.Parsing
                  , Day7.Solutions, Day7.Tests, Day7.Parsing
                  , Day8.Solutions, Day8.Tests, Day8.Parsing
                  , Day9.Solutions, Day9.Tests
  build-Depends:    base >= 3 && < 5
                  , tasty
                  , tasty-hunit
                  , file-embed
                  , containers
                  , time
                  , rset
                  , pointedlist
